--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     </style>
   </head>
   <body>
-    <img src="solar.jpg" alt="solar system" usemap="#solarmap" width="800">
 
-<map name="solarmap">
-  <area shape="circle" coords="36,205,38" alt="pluto" href="https://xtine333.github.io/pluto1/">
-  <area shape="circle" coords="229,188,73" alt="saturn" href="saturn.html">
-</map>
+  <button onclick="popup()">press me</button>
+
+<script>
+function popup() {
+  alert("Your computer is breaking down!!!!!!!!!!");
+}
+</script>
     
   </body>
 </html>
